--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   },
   "author": "Priyanshu",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^3.1.1"
+  }
 }
